--- a/trunk/auto/install
+++ b/trunk/auto/install
@@ -140,7 +140,6 @@ install:	$NGX_OBJS${ngx_dirsep}nginx${ngx_binext} \
 	test -f '\$(DESTDIR)$NGX_CONF_PATH' \
 		|| cp conf/nginx.conf '\$(DESTDIR)$NGX_CONF_PATH'
 	cp conf/nginx.conf '\$(DESTDIR)$NGX_CONF_PREFIX/nginx.conf.default'
-	cp conf/*.conf '\$(DESTDIR)$NGX_CONF_PREFIX/'
 
 	test -d '\$(DESTDIR)`dirname "$NGX_PID_PATH"`' \
 		|| mkdir -p '\$(DESTDIR)`dirname "$NGX_PID_PATH"`'
@@ -150,6 +149,14 @@ install:	$NGX_OBJS${ngx_dirsep}nginx${ngx_binext} \
 
 	test -d '\$(DESTDIR)$NGX_PREFIX/html' \
 		|| cp -R $NGX_HTML '\$(DESTDIR)$NGX_PREFIX'
+
+	#for esb add
+	cp conf/esb_monitor.conf '\$(DESTDIR)$NGX_CONF_PREFIX/esb_monitor.conf'
+	cp conf/proxy.conf '\$(DESTDIR)$NGX_CONF_PREFIX/proxy.conf'
+	cp conf/status.conf '\$(DESTDIR)$NGX_CONF_PREFIX/status.conf'
+	mkdir -p '\$(DESTDIR)$NGX_CONF_PREFIX/deployments'
+	cp -R conf/deployments '\$(DESTDIR)$NGX_CONF_PREFIX/deployments'
+
 END
 
 
