--- a/tools/install
+++ b/tools/install
@@ -1,3 +1,3 @@
 yum install daemonize
-go build tools.go /usr/bin/tools
-daemonize -p /var/run/tools.pid -l /var/lock/subsys/tools -u nobody /usr/bin/tools
+go build -o /usr/bin/tools tools.go 
+daemonize -p /var/run/tools.pid -l /var/lock/subsys/tools -u nobody /usr/bin/tools :8888 127.0.0.1 5
